--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
 
       img {
         display: block;
-        width: clamp(220px, 48vw, 960px);
-        max-width: 90vw;
+        max-width: min(90vw, 960px);
         height: auto;
         max-height: 56svh;
-        object-fit: contain;
         border-radius: 12px;
         cursor: pointer;
         /* Disable selection and dragging */
@@ -66,6 +64,8 @@
         user-drag: none;
         -webkit-touch-callout: none;
       }
+
+      #hero-link { display: inline-block; }
 
       #signup {
         width: min(600px, 92vw);
@@ -86,7 +86,7 @@
       @media (max-width: 480px) {
         img {
           max-height: 42svh;
-          width: clamp(220px, 92vw, 640px);
+          max-width: 92vw;
         }
         body {
           gap: 10px;
