--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <img src="./lsw.jpg" alt="mons.shop" draggable="false" />
     </a>
     <div id="signup">
-      <h2 class="tagline">Get notified of the first drop 🥱</h2>
+      <h2 class="tagline">Get notified of the first drop</h2>
       <script
         async
         src="https://eomail5.com/form/578237fe-8fb4-11f0-8bba-a35988c2be69.js"
