update bg color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       @media (prefers-color-scheme: dark) {
         :root {
-          --bg: #0b0c0e;
+          --bg: #131313;
           --fg: #e7e7e7;
         }
       }
@@ -42,8 +42,8 @@
         background-color: var(--bg);
         color: var(--fg);
         color-scheme: light dark;
-        font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-          Roboto, Ubuntu, Cantarell, "Noto Sans", Arial, "Apple Color Emoji",
+        font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto,
+          Ubuntu, Cantarell, "Noto Sans", Arial, "Apple Color Emoji",
           "Segoe UI Emoji";
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
@@ -65,7 +65,9 @@
         -webkit-touch-callout: none;
       }
 
-      #hero-link { display: inline-block; }
+      #hero-link {
+        display: inline-block;
+      }
 
       #signup {
         width: min(600px, 92vw);
@@ -111,6 +113,5 @@
         data-form="578237fe-8fb4-11f0-8bba-a35988c2be69"
       ></script>
     </div>
-    
   </body>
 </html>
