--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        min-height: clamp(220px, 28vh, 360px);
         gap: 12px;
       }
 
